# xCALE

./: .ssh  .ssh.pub  README.md
General/: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  README.md  pilgConfig.cmake.in
General/benchmarks/AdjMatrix/: Asiatransition_AdjMatrix.txt  alarm_AdjMatrix.txt  hailfinder_AdjMatrix.txt
General/benchmarks/Temporalbenchmarks/: Asiaorig.txt  Asiaorig.xdsl  BN_netG1_Asia3.xdsl  BN_netG1_Asia3_AdjMatrix.txt  BN_netG1_Asiaorigine.txt  BN_netG1_Asiaorigine.xdsl
General/benchmarks/Temporalbenchmarks/initial/: Asia_AdjMatrix.txt  alarm_AdjMatrix.txt  andes_AdjMatrix.txt  hailfinder_AdjMatrix.txt  link_AdjMatrix.txt  win95pts_AdjMatrix.txt
General/benchmarks/Temporalbenchmarks/transition/: Asia.xdsl  Asia1.txt  Asia1.xdsl  Asia_AdjMatrix.txt  alarm.xdsl  andes.xdsl  andes_AdjMatrix.txt  hailfinder.xdsl  link.xdsl  win95pts.xdsl  win95pts_AdjMatrix.txt
General/benchmarks/data/: Asia_csv.data  Spam_csv.data  Spam_incomplete_csv.data  mammographic_masses.data
General/benchmarks/networks/: Asia.xdsl  Asia_modified.xdsl  Juggler.xdsl  OrateurG0.xdsl  OrateurGt.xdsl  SpamBN.xdsl  jdBnJuggler.xml  noisyMax_ABC_ok-ko-deg.xml  serialized_ABC_BN.xdsl  test_query_optimized_deroulable.xdsl  test_query_optimized_t.xdsl  test_query_optimized_t0.xdsl
General/dependencies/boost/: lib.cmake
General/dependencies/probt/: lib.cmake
General/dependencies/probt/libprobt/: CMakeLists.txt  Findprobt.cmake  README.md  probtConfig.cmake.in
General/dependencies/threads/: lib.cmake
General/devops/ci/common/: ctest2junit.py  junittemplate.xsl
General/devops/ci/gitlab/: README.md
General/include/pilgrim/general/: log.h  pm15dBN.h  pmDynamicBayesianNetwork.h  pmFrequencyCounter.h  pmMTSimilarityMeasures.h  pmSlidingWindow.h
General/src/pilgrim/general/: log.cpp  plBayesianNetworkFromXDSLfile.cpp  pm15dBN.cpp  pmBayesianNetwork.cpp  pmCSVDataSet.cpp  pmCSVdynDataSet.cpp  pmClassifier.cpp  pmClassifierMultinet.cpp  pmClassifierSingleBN.cpp  pmDraw.cpp  pmDynamicBayesianNetwork.cpp  pmFrequencyCounter.cpp  pmMTCSVDataSet.cpp  pmMTSimilarityMeasures.cpp  pmPDAG.cpp  pmSlidingWindow.cpp  pmUtility.cpp  pmWGraph.cpp
General/test/: CMakeLists.txt  runcoverage.sh  testing.h
General/test/bn/: bn_bayesiannetwork.cpp  bn_juggler.cpp
General/test/bn_from_xml/: test_bn_from_xml.cpp
General/test/creating_bn/: create_bn.cpp
General/test/generate_csvData/: test_generate_csvData.cpp
General/test/learnParameters/: test_learnParameters.cpp  test_learnParameters_incre.cpp  test_learnParameters_incre_with_learnObj.cpp  test_learnParameters_with_learnObj.cpp
General/test/pdag/: pdag_pdag.cpp
General/test/save_as_xml/: test_save_as_xml.cpp
General/test/structurelearning/: structurelearning_mwst_bic.cpp  test_cache.cpp
General/test/summary/: test_summary.cpp
General/test/wgraph/: wgraph_wgraph.cpp
General/usecases/: CMakeLists.txt  createLabeledSpamBN.cpp  createLabeledSpamBN.h  main.cpp
General/usecases/Algo/DBN/: learnStructDBN.cpp  learnStructDBN.h
General/usecases/Algo/ExamenMarks/: learnStructExamenMarks.cpp  learnStructExamenMarks.h
General/usecases/Algo/Juggler/: learnStructJuggler.cpp  learnStructJuggler.h
General/usecases/Algo/Marks/: learnStructMarks_MWST.cpp  learnStructMarks_MWST.h
General/usecases/Algo/UniAdmissions/: learnStructUniAdmissions_GS.cpp  learnStructUniAdmissions_GS.h
General/usecases/DBN/: CreateDBNWithLO.cpp  CreateDBNWithLO.h  QueryDBNWithLO.cpp  QueryDBNWithLO.h  createBKT.cpp  createBKT.h  createDBN.cpp  createDBN.h  createDBNidentical.cpp  createDBNidentical.h  queryDBN.cpp  queryDBN.h
General/usecases/Deprecated/: DBN15_getOutgoingInterface.cpp  DBN15_getOutgoingInterface.h  DBN15_use_predict.cpp  DBN15_use_predict.h  DBN_generate_csv_data.cpp  DBN_generate_csv_data.h  DBN_get_JointDistribution.cpp  DBN_get_JointDistribution.h  DBN_get_initial_and_Transition_graphs.cpp  DBN_get_initial_and_Transition_graphs.h  DBN_load.cpp  DBN_load.h  DBN_query.cpp  DBN_query.h  DBN_unroll.cpp  DBN_unroll.h  NewDBN.cpp  buildWGraph.cpp  buildWGraph.h  createAndExportBNSpam.cpp  createAndExportBNSpam.h  createBN.cpp  createBN.h  createBNJuggler.cpp  createBNJuggler.h  createDynamicBN.cpp  createDynamicBN.h  createLabeledSpamBN.cpp  createLabeledSpamBN.h  how_to_create_DBN15.cpp  how_to_create_DBN15.h  learnSpamBN.cpp  learnSpamBN.h  loadBNJuggler.cpp  loadBNJuggler.h  loadFromXml.cpp  loadFromXml.h  noisyMaxProbt.cpp  noisyMaxProbt.h  noisyMaxSerialize.cpp  (+13 more)
General/usecases/testMMHC/: testMMHC.cpp
KnowledgeTracing/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dirty_test.csv  dirty_test.xml  knowledge_tracing
KnowledgeTracing/Data-Extraction/: Data-Extraction.ipynb  PAP-1.ipynb  README.txt  csv_read_test.cpp  package-lock.json  pretraitement.ipynb  requirements.txt
KnowledgeTracing/Data-Extraction/.ipynb_checkpoints/: PAP-1-checkpoint.ipynb
KnowledgeTracing/Data-Extraction/EvalData/: eval_data.csv
KnowledgeTracing/Data-Extraction/Requirements/: requirements.txt
KnowledgeTracing/core/include/: BKTParam.h  debugtools.h  exercise.h  exercisesEvaluations.h  genericBKTModel.h  learner.h  resultStorage.h  scale.h  skill.h  student.h  tools.h  types.h
KnowledgeTracing/core/src/: BKTParam.cpp  debugtools.cpp  exercise.cpp  genericBKTModel.cpp  learner.cpp  student.cpp  tools.cpp
KnowledgeTracing/deprecated/include/: Example.h  createHMM.h
KnowledgeTracing/deprecated/src/: Example.cpp  createHMM.cpp  createHMM2.cpp
KnowledgeTracing/metadata/: bktConfig.json  exoConfig.json  learnerConfig.json  scaleConfig.json  skillConfig.json
KnowledgeTracing/usecases/: main.cpp
KnowledgeTracing/usecases/include/: impacted.h  prerequisite.h  progressiveBKT.h  scalabilityTest.h  serialize_deserialize.h  studentTest.h  xcale.h
KnowledgeTracing/usecases/src/: impacted.cpp  prerequisite.cpp  progressiveBKT.cpp  scalabilityTest.cpp  serialize_deserialize.cpp  studentTest.cpp  xCaleBKT.cpp  xCaleBKT_debug.cpp  xcale.cpp  xcaleAUTO.cpp
tests/: test  test.cpp
(+448 files in other folders)
